statum-macros/tests/ui/invalid_validators_missing_machine_path.stderr
error: Error: `#[validators(...)]` requires a machine path.
       Expected: `#[validators(WorkflowMachine)] impl PersistedRow { ... }`
       Fix: pass the target Statum machine type in the attribute, for example `#[validators(self::flow::WorkflowMachine)]`.
  --> tests/ui/invalid_validators_missing_machine_path.rs:23:1
   |
23 | #[validators]
   | ^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)
